# cpu-limiter-rs

./: .gitignore  Cargo.toml  README.md  README_EN.md  build_and_package.sh  main.lua
module/: customize.sh  module.prop  service.sh
module/vtools/: gen_json.sh  init_vtools.sh  powercfg.sh
src/: config.rs  cpu_policy.rs  main.rs  mode.rs  temp_reader.rs
