[package]
name = "cpu-limiter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
inotify = { version = "0.10.2", default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
